// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HorizontalTabs /> Standard tabs with current tab should match the snapshot 1`] = `
<styled.div>
  <styled.ul>
    <styled.li
      key="0"
    >
      <styled.a
        className=""
        data-tabindex={0}
        onClick={[Function]}
      >
        Tab 1
      </styled.a>
    </styled.li>
    <styled.li
      key="1"
    >
      <styled.a
        className=""
        data-tabindex={1}
        onClick={[Function]}
      >
        Tab 2
      </styled.a>
    </styled.li>
    <styled.li
      key="2"
    >
      <styled.a
        className="active"
        data-tabindex={2}
        onClick={[Function]}
      >
        <span
          className="left-component"
        >
          <div
            id="tab3left"
          >
            Test me
          </div>
        </span>
        Tab 3
      </styled.a>
    </styled.li>
    <styled.li
      key="3"
    >
      <span>
        <div
          id="tab4"
        >
          Tab 4
        </div>
      </span>
    </styled.li>
  </styled.ul>
  <styled.div>
    <h2
      id="tab3content"
    >
      BOO
    </h2>
  </styled.div>
</styled.div>
`;

exports[`<HorizontalTabs /> Standard tabs with default anchor should match the snapshot 1`] = `
<styled.div>
  <styled.ul>
    <styled.li
      key="0"
    >
      <styled.a
        className=""
        data-tabindex={0}
        onClick={[Function]}
      >
        Tab 1
      </styled.a>
    </styled.li>
    <styled.li
      key="1"
    >
      <styled.a
        className="active"
        data-tabindex={1}
        href="#second"
        onClick={[Function]}
      >
        Tab 2
      </styled.a>
    </styled.li>
    <styled.li
      key="2"
    >
      <styled.a
        className=""
        data-tabindex={2}
        href="#third"
        onClick={[Function]}
      >
        <span
          className="left-component"
        >
          <div
            id="tab3left"
          >
            Test me
          </div>
        </span>
        Tab 3
      </styled.a>
    </styled.li>
    <styled.li
      key="3"
    >
      <span>
        <div
          id="tab4"
        >
          Tab 4
        </div>
      </span>
    </styled.li>
  </styled.ul>
  <styled.div>
    Some more cool content
  </styled.div>
</styled.div>
`;

exports[`<HorizontalTabs /> Standard tabs with default index should match the snapshot 1`] = `
<styled.div>
  <styled.ul>
    <styled.li
      key="0"
    >
      <styled.a
        className=""
        data-tabindex={0}
        onClick={[Function]}
      >
        Tab 1
      </styled.a>
    </styled.li>
    <styled.li
      key="1"
    >
      <styled.a
        className=""
        data-tabindex={1}
        onClick={[Function]}
      >
        Tab 2
      </styled.a>
    </styled.li>
    <styled.li
      key="2"
    >
      <styled.a
        className="active"
        data-tabindex={2}
        onClick={[Function]}
      >
        <span
          className="left-component"
        >
          <div
            id="tab3left"
          >
            Test me
          </div>
        </span>
        Tab 3
      </styled.a>
    </styled.li>
    <styled.li
      key="3"
    >
      <span>
        <div
          id="tab4"
        >
          Tab 4
        </div>
      </span>
    </styled.li>
  </styled.ul>
  <styled.div>
    <h2
      id="tab3content"
    >
      BOO
    </h2>
  </styled.div>
</styled.div>
`;
